Fix map visibility

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,6 +5,11 @@ html, body, #root {
 
 #map {
   height: 100%;
+  width: 100%;
+}
+
+#root > div {
+  height: 100%;
 }
 
 button.drop-pin {
